@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.183 2006/05/18 18:24:30 tlecomte Exp $
+dnl $Id: configure.in,v 1.184 2006/05/22 12:59:44 lhecking Exp $
 dnl
 AC_INIT(src/graphics.c)
 AM_CONFIG_HEADER(config.h:config.hin)
@@ -989,6 +989,9 @@ fi
 AM_CONDITIONAL(BUILD_WXWIDGETS, test "${enable_wxwidgets_ok}" = yes)
 
 dnl  End wxWidgets terminal
+
+dnl Enable parsing of deprecated syntax
+  AC_DEFINE(BACKWARDS_COMPATIBLE, 1, [Define to enable parsing of deprecated syntax])
 
 dnl build lisp files
 if test "$with_lisp_files" != no; then
